# libcollider

./: Makefile  README.md  meson.build
src/: collider.h  libcollider.c
